--- a/styles/main.css
+++ b/styles/main.css
@@ -11,8 +11,9 @@
     justify-content: space-between;
     background-color: #162D54;
     height: 100px;
-    padding: 0px 50px 0px 50px;
+    padding: 0px 70px 0px 70px; 
     align-items: center;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.486);
 }
 #nav-section img {
     width: 150px;
@@ -21,39 +22,123 @@
 #nav-section .hmb-menu {
     display: none;
 }
-.nav-ul {
+#nav-section .hmb-label {
+    float: left;
+    margin: 40px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+}
+.hmb-label .bar {
+    background-color: #ffff;
+    margin: 2px;
+    height: 2px;
+    width: 19px;
+    border-radius: 5px;
+}
+#main-nav {
     display: flex;
     flex-direction: row;
     list-style: none;
 }
-.nav-ul li a {
+#main-nav li a {
     font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 700;
     margin: 10px;
     color: #ffff;
     text-decoration: none;
     text-transform: uppercase;
-    letter-spacing: 1.5px;
     display: inline-block;
     position: relative;
 }
-.nav-ul li a::after {
+#main-nav li a::after {
     content: "";
     position: absolute;
     width: 100%;
     transform: scaleX(0);
-    height: 2px;
+    height: 1px;
     bottom: 0;
     left: 0;
     background-color: #ffff;
     transform-origin: bottom right;
     transition: 0.25s ease-out;
 }
-.nav-ul li a:hover::after {
+#main-nav li a:hover::after {
     transform: scaleX(1);
     transform-origin: bottom left;
 }
+#side-nav-container {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    max-height: 0;
+    max-width: 0;
+    transition: max-height 0.3s ease;
+    background-color: #E1D3C3;
+    overflow: hidden;
+    z-index: 100;
+    margin: 0;
+    top: 0px;
+    left: 0px;
+    padding: 0px;
+}
+#side-nav-container .hmb-label {
+    margin-left: 0px;
+    margin-right: 120px;
+}
+#side-nav li {
+    list-style: none;
+}
+#side-nav li a {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    margin: 10px;
+    color: #ffff;
+    text-decoration: none;
+    text-transform: uppercase;
+    display: inline-block;
+    position: relative;
+}
+#side-nav li a::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 1px;
+    bottom: 0;
+    left: 0;
+    background-color: #ffff;
+    transform-origin: bottom right;
+    transition: 0.25s ease-out;
+}
+#side-nav li a:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
+#hmb-menu:checked ~ #side-nav-container {
+    max-height: 110%;
+    height: 100%;
+    max-width: 360px;
+    width: 100%;
+}
+#hmb-menu:checked ~ .hmb-label .bar1 {
+    transform: translate(0, 6.2px) rotate(45deg);
+    transition: 0.2s ease-out;
+    width: 20px; 
+}
+#hmb-menu:checked ~ .hmb-label .bar2 {
+    opacity: 0;
+    transform: translate(-10px);
+    transition: 0.2s;
+}
+#hmb-menu:checked ~ .hmb-label .bar3 {
+    transform: translate(0, -6.2px) rotate(-45deg);
+    transition: 0.2s ease-out;
+    width: 20px;
+} 
 #mainHeaderSection {
     position: relative;
     height: 450px;
@@ -83,4 +168,7 @@
 }
 #main-text {
     margin-top: 50px;
+    font-size: 25px;
+    font-weight: 300;
+    font-family: 'Montserrat', sans-serif;
 }
