--- a/styles/main.css
+++ b/styles/main.css
@@ -1,191 +1,267 @@
 .body-container {
-    background: black;
+  background: black;
 }
 #header-section {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
-#nav-section{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: #162D54;
-    height: 100px;
-    padding: 0px 70px 0px 70px; 
-    align-items: center;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.486);
+#nav-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #162d54;
+  height: 100px;
+  padding: 0px 70px 0px 70px;
+  align-items: center;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.486);
 }
 #nav-section img {
-    width: 150px;
-    height: 70px;
+  width: 150px;
+  height: 70px;
 }
 #nav-section .hmb-menu {
-    display: none;
+  display: none;
 }
 #nav-section .hmb-label {
-    position: relative;
-    float: left;
-    margin: 40px;
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    align-self: center;
-    z-index: 101;
+  position: relative;
+  float: left;
+  margin: 40px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  z-index: 101;
 }
 .hmb-label .bar {
-    background-color: #ffff;
-    margin: 2px;
-    height: 2px;
-    width: 19px;
-    border-radius: 5px;
+  background-color: #ffff;
+  margin: 2px;
+  height: 2px;
+  width: 19px;
+  border-radius: 5px;
 }
 #main-nav {
-    display: flex;
-    flex-direction: row;
-    list-style: none;
+  display: flex;
+  flex-direction: row;
+  list-style: none;
 }
 #main-nav li a {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 14px;
-    font-weight: 700;
-    margin: 10px;
-    color: #ffff;
-    text-decoration: none;
-    text-transform: uppercase;
-    display: inline-block;
-    position: relative;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  margin: 10px;
+  color: #ffff;
+  text-decoration: none;
+  text-transform: uppercase;
+  display: inline-block;
+  position: relative;
 }
 #main-nav li a::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    transform: scaleX(0);
-    height: 1px;
-    bottom: 0;
-    left: 0;
-    background-color: #ffff;
-    transform-origin: bottom right;
-    transition: 0.25s ease-out;
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  background-color: #ffff;
+  transform-origin: bottom right;
+  transition: 0.25s ease-out;
 }
 #main-nav li a:hover::after {
-    transform: scaleX(1);
-    transform-origin: bottom left;
+  transform: scaleX(1);
+  transform-origin: bottom left;
 }
 #side-nav-container {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    max-height: 0;
-    max-width: 0;
-    transition: max-height 0.3s ease;
-    background-color: #E1D3C3;
-    overflow: hidden;
-    z-index: 100;
-    margin: 0;
-    top: 100px;
-    left: 0px;
-    padding: 0px;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  max-height: 0;
+  max-width: 0;
+  transition: max-height 0.3s ease;
+  background-color: #e1d3c3;
+  overflow: hidden;
+  z-index: 100;
+  margin: 0;
+  top: 100px;
+  left: 0px;
+  padding: 0px;
 }
 #side-nav {
-    padding-left: 0px;
-    margin-top: 1px;
-    margin-bottom: 0;
+  padding-left: 0px;
+  margin-top: 1px;
+  margin-bottom: 0;
 }
 #side-nav li {
-    border-color: #dbc6ad;
-    border-style: solid;
-    border-width: 1px 1px 0px 1px;
-    list-style: none;
+  border-color: #dbc6ad;
+  border-style: solid;
+  border-width: 1px 1px 0px 1px;
+  list-style: none;
+}
+#side-nav li:hover {
+    background-color: #ad9578;
+    transition: 0.25s;
 }
 #side-nav li a {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    margin: 10px;
-    color: #ffff;
-    text-decoration: none;
-    text-transform: uppercase;
-    display: inline-block;
-    position: relative;
+  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  margin: 10px;
+  color: #ffff;
+  text-decoration: none;
+  text-transform: uppercase;
+  display: inline-block;
+  position: relative;
 }
 #side-nav li a::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    transform: scaleX(0);
-    height: 1px;
-    bottom: 0;
-    left: 0;
-    background-color: #ffff;
-    transform-origin: bottom right;
-    transition: 0.25s ease-out;
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  background-color: #ffff;
+  transform-origin: bottom right;
+  transition: 0.25s ease-out;
 }
 #side-nav li a:hover::after {
-    transform: scaleX(1);
-    transform-origin: bottom left;
+  transform: scaleX(1);
+  transform-origin: bottom left;
 }
 .contact-container {
-    text-align: center;
-    background-color: #dbc6ad;
+  text-align: center;
+  background-color: #dbc6ad;
 }
 .contact-container:hover {
-    background-color: #ad9578;
-    cursor: pointer;
-    transition: 0.25s;
+  background-color: #ad9578;
+  cursor: pointer;
+  transition: 0.25s;
 }
 .contact-text {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 20px;
-    font-weight: 900;
-    text-transform: uppercase;
-    color: #ffff;
-    display: inline-block;
-    position: relative;
+  font-family: "Montserrat", sans-serif;
+  font-size: 20px;
+  font-weight: 900;
+  text-transform: uppercase;
+  color: #ffff;
+  display: inline-block;
+  position: relative;
 }
 .contact-text::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    transform: scaleX(0);
-    height: 1px;
-    bottom: 0;
-    left: 0;
-    background-color: #ffff;
-    transform-origin: bottom right;
-    transition: 0.25s ease-out;
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  background-color: #ffff;
+  transform-origin: bottom right;
+  transition: 0.25s ease-out;
 }
 .contact-text:hover:after {
-    transform: scaleX(1);
-    transform-origin: bottom left;
+  transform: scaleX(1);
+  transform-origin: bottom left;
 }
 #hmb-menu:checked ~ #side-nav-container {
-    max-height: 482px;
-    height: 100%;
-    max-width: 360px;
-    width: 100%;
+  max-height: 482px;
+  height: 100%;
+  max-width: 360px;
+  width: 100%;
 }
 #hmb-menu:checked ~ .hmb-label .bar1 {
-    transform: translate(0, 6.2px) rotate(45deg);
-    transition: 0.25s ease-out;
-    width: 20px; 
+  transform: translate(0, 6.2px) rotate(45deg);
+  transition: 0.25s ease-out;
+  width: 20px;
 }
 #hmb-menu:checked ~ .hmb-label .bar2 {
-    opacity: 0;
-    transform: translate(-10px);
-    transition: 0.25s;
+  opacity: 0;
+  transform: translate(-10px);
+  transition: 0.25s;
 }
 #hmb-menu:checked ~ .hmb-label .bar3 {
-    transform: translate(0, -6.2px) rotate(-45deg);
-    transition: 0.25s ease-out;
-    width: 20px;
-} 
+  transform: translate(0, -6.2px) rotate(-45deg);
+  transition: 0.25s ease-out;
+  width: 20px;
+}
 #mainHeaderSection {
-    position: relative;
-    height: 450px;
+  position: relative;
+  height: 450px;
 }
 #mainHeaderSection::before {
+  content: "";
+  background-image: url(/assets/avi-werde-HI4nq3HjImU-unsplash.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  opacity: 0.4;
+}
+#main-h1,
+#main-text {
+  margin-top: 110px;
+  position: relative;
+  color: #ffff;
+  text-align: center;
+}
+#main-h1 {
+  font-size: 71px;
+  font-family: "Montserrat", sans-serif;
+}
+#main-text {
+  margin-top: 50px;
+  font-size: 25px;
+  font-weight: 300;
+  font-family: "Montserrat", sans-serif;
+}
+#learn-section {
+  height: 300px;
+  background-color: #ffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#learn-container {
+  display: grid;
+  grid-template-columns: 70% 30%;
+}
+#main-h3 {
+  color: #162d54;
+  margin: 40px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 30px;
+  width: 110%;
+  align-self: center;
+}
+#contact-btn {
+  margin: 40px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+  width: 200px;
+  height: 70px;
+  border: 3px solid #162d54;
+  color: #162d54;
+  background-color: #ffff;
+}
+#contact-btn:hover {
+  cursor: pointer;
+  background-color: #162d54;
+  transition: 0.25s;
+  color: #ffff;
+  box-shadow: 0px 0px 5px black;
+}
+#info-section {
+    position: relative;
+    height: 600px;
+}
+#info-section::before {
     content: "";
-    background-image: url(/assets/avi-werde-HI4nq3HjImU-unsplash.jpg);
+    background-image: url(/assets/mohamed-masaau-nfF5-G6cFwY-unsplash.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom;
@@ -194,30 +270,16 @@
     right: 0px;
     bottom: 0px;
     left: 0px;
-    opacity: 0.4;
+    opacity: 0.3;
 }
-#main-h1, #main-text {
-    margin-top: 110px;
-    position: relative;
-    color: #ffff;
-    text-align: center;
-}
-#main-h1 {
-    font-size: 71px;
-    font-family: 'Montserrat', sans-serif;
-}
-#main-text {
-    margin-top: 50px;
-    font-size: 25px;
-    font-weight: 300;
-    font-family: 'Montserrat', sans-serif;
-}
-#learn-section {
-    height: 200px;
-    background-color: #ffff;
-}
-#learn-container {
+#info-container{ 
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+}
+#info-h2, #info-p{ 
+    margin: 0px;
+    position: relative;
+    text-align: center;
+    color: #ffff;
+    font-family: 'Montserrat', sans-serif;
 }
