--- a/styles/main.css
+++ b/styles/main.css
@@ -310,6 +310,7 @@
     margin-left: 75px;
 }
 .global-h3 {
+    color: #162d54;
     font-size: 35px;
     font-weight: 600;
     width: 50%;
@@ -353,7 +354,7 @@
     color: #ffff;
     font-family: 'Montserrat', sans-serif;
 }
-#us-h3 {
+#us-h3 {  
     font-size: 51px;
     font-weight: 500;
 }
@@ -363,4 +364,64 @@
 }
 #footer-section {
     background-color: #ffff;
+    padding: 80px;
+}
+.footer-h3 {
+    color: #162d54;
+    margin-left: 260px;
+    margin-bottom: 40px;
+    font-size: 30px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+}
+#contactInfo-container {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    text-align: center;
+}
+.footer-p {
+    font-family: 'Montserrat', sans-serif;
+}
+#luxury-span:hover {
+    color: #162d54;
+    font-weight: 600;
+    transition: 0.25s;
+}
+.footer-title {
+    font-size: 18px;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: #162d54;
+}
+#footer-spacer {
+    display: inline-block;
+    width: 1100px;
+    height: 3px;
+    margin-left: 350px;
+    background-color: #162d54;
+}
+#data-container {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.footer-ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    list-style: none;
+}
+.footer-ul li {
+    margin-left: 35px;
+}
+.fa-brands {
+    font-size: 25px;
+    color: #162d54;
+}
+.fa-brands:hover {
+    cursor: pointer;
+    color: #0a1b38;
+    transform: scale(1.2);
+    transition: 0.25s;
 }
