--- a/styles/main.css
+++ b/styles/main.css
@@ -77,7 +77,7 @@
   position: absolute;
   max-height: 0;
   width: 100%;
-  transition: max-height 0.3s ease;
+  transition: 0.3s ease;
   background-color: #162d54;
   overflow: hidden;
   z-index: 100;
